objects/Account.object
<CustomObject>
    <fields>
        <fullName>Another_picklist__c</fullName>
        <label>Another picklist</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>test_picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>high</fullName>
                </value>
                <value>
                    <fullName>medium</fullName>
                </value>
                <value>
                    <fullName>low</fullName>
                </value>
                <value>
                    <fullName>hyd</fullName>
                </value>
                <value>
                    <fullName>mumbai</fullName>
                </value>
                <value>
                    <fullName>knl</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_picklist__c</fullName>
        <label>test picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>warm</fullName>
                </value>
                <value>
                    <fullName>cold</fullName>
                    <isActive>false</isActive>
                    <label>cold</label>
                </value>
                <value>
                    <fullName>hot</fullName>
                    <isActive>false</isActive>
                    <label>hot</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>text_filed__c</fullName>
        <label>text_filed</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>weather__c</fullName>
        <label>weather</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>cold</fullName>
                </value>
                <value>
                    <fullName>hot</fullName>
                </value>
                <value>
                    <fullName>warm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>account_record_type</fullName>
        <active>true</active>
        <label>account record type</label>
    </recordTypes>
    <recordTypes>
        <fullName>testing_recordtype</fullName>
        <active>true</active>
        <label>testing recordtype</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>